--- a/pages/play/play.wxml
+++ b/pages/play/play.wxml
@@ -1,2 +1,14 @@
 <!--pages/play/play.wxml-->
+<view class="play-container">
+  <view>{{songName}}</view>
+  <view>
+    <scroll-view scroll-y="true" style="height: 300rpx;">
+      {{songWord}}
+    </scroll-view>
+  </view>
+  <view>
+    <image src="/images/play_icon_default.png" bindtap="controlItem" />
+  </view>
+</view>
+
 <audio src="{{src}}" action="{{action}}"></audio>
