--- a/pages/play/play.wxss
+++ b/pages/play/play.wxss
@@ -1,1 +1,87 @@
 /* pages/play/play.wxss */
+.play-container {
+
+}
+
+.big_img {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    filter: blur(30px);
+}
+
+.big_img::before {
+    content: " ";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0,0,0,.5);
+}
+
+.play-container-body-control {
+    position: relative;
+    height: 494rpx;
+    margin-top: 140rpx;
+}
+
+.play-container-body-control image {
+    position: absolute;
+    width: 494rpx;
+    height: 494rpx;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.play-container-body-control image:nth-child(5) {
+    z-index: 5;
+    width: 112rpx;
+    height: 112rpx;
+}
+
+.play-container-body-control image:nth-child(2) {
+    z-index: 3;
+}
+
+.play-container-body-control image:nth-child(4) {
+    z-index: 2;
+    width: 368rpx;
+    height: 368rpx;
+    border-radius: 50%;
+    animation: zhuan 6s linear infinite;
+}
+
+.play-container-body-control image:nth-child(3) {
+    z-index: 1;
+    width: 368rpx;
+    height: 368rpx;
+    border-radius: 50%;
+}
+
+.play-container-body-control image:nth-child(1) {
+    z-index: 4;
+    width: 146rpx;
+    height: 226rpx;
+    top: 20rpx;
+    -webkit-transform: rotate(-7deg) translateY(-50%);
+    -ms-transform: rotate(-7deg) translateY(-50%);
+    transform: rotate(-7deg) translateY(-50%);
+}
+
+@keyframes zhuan {
+    from {
+        transform: rotate(0deg);
+        left: 0;
+        top: 0;
+    }
+    to {
+        transform: rotate(360deg);
+        left: 0;
+        top: 0;
+    }
+}
